--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,11 @@ dependencies {
 
     compile 'com.android.support:design:24.2.0'
 
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
+
     compile 'com.google.android.gms:play-services:9.4.0'
 
     compile 'com.google.maps.android:android-maps-utils:0.4+'
 }
+
+apply plugin: 'com.google.gms.google-services'
