--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.scame.savealifenotifier">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -12,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/SaveALifeTheme.Green">
         <activity android:name=".presentation.activities.FirebaseTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +23,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.activities.HelpMeActivity" />
+        <activity android:name=".presentation.activities.PageActivity" />
 
         <service
             android:name=".firebase.MyFirebaseMessagingService">
@@ -36,6 +38,8 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
+        <service android:name=".FusedLocationService" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
