--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://oss.sonatype.org/content/groups/public/" }
+        maven { url "https://jitpack.io" }
     }
 }
 
