--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/SaveALifeTheme.Green">
         <activity android:name=".presentation.activities.FirebaseTestActivity">
+
+        </activity>
+
+        <activity android:name=".presentation.activities.PageActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".presentation.activities.PageActivity" />
 
         <service
             android:name=".firebase.MyFirebaseMessagingService">
