--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         </activity>
 
         <activity android:name=".presentation.activities.PageActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".presentation.activities.DriversHelpMapActivity" />
         <activity android:name=".presentation.activities.GoogleHelpMapActivity" />
+
+        <activity android:name=".presentation.activities.SplashScreenActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+
+        </activity>
 
         <service
             android:name=".firebase.MyFirebaseMessagingService">
