--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/SaveALifeTheme.Green">
+        android:theme="@style/AppTheme">
         <activity android:name=".presentation.activities.FirebaseTestActivity">
 
         </activity>
