--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.scame.savealifenotifier">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -39,6 +42,8 @@
 
         </activity>
 
+        <activity android:name=".presentation.activities.MapboxStarter" />
+
         <service
             android:name=".firebase.MyFirebaseMessagingService">
             <intent-filter>
@@ -54,6 +59,8 @@
         </service>
 
         <service android:name=".FusedLocationService" />
+
+        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
