--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.1@aar'){
         transitive=true
     }
+
+    compile ('com.mapbox.mapboxsdk:mapbox-android-services:1.3.1@aar'){
+        transitive=true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
